--- a/public/admin/projects.html
+++ b/public/admin/projects.html
@@ -3,38 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <title>Admin - Projects</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-  <h2>Manage Projects</h2>
+  <div class="min-h-screen bg-white text-black">
+    <main class="max-w-4xl mx-auto px-6 py-10">
+      <h2 class="text-2xl font-bold mb-4">Manage Projects</h2>
 
-  <form id="projectForm">
-    <input type="hidden" id="project_id">
-    <label>Title:</label>
-    <input type="text" id="title" required>
+      <section class="bg-white border border-gray-200 rounded-lg p-6 mb-8">
+        <form id="projectForm" class="space-y-4">
+          <input type="hidden" id="project_id">
+          <div>
+            <label class="block text-sm font-medium text-gray-700">Title</label>
+            <input class="mt-1 block w-full border border-gray-200 rounded px-3 py-2" type="text" id="title" required>
+          </div>
 
-    <label>Description:</label>
-    <textarea id="description" required></textarea>
+          <div>
+            <label class="block text-sm font-medium text-gray-700">Description</label>
+            <textarea class="mt-1 block w-full border border-gray-200 rounded px-3 py-2" id="description" required></textarea>
+          </div>
 
-    <label>Link:</label>
-    <input type="url" id="link">
+          <div class="grid sm:grid-cols-3 gap-4">
+            <div>
+              <label class="block text-sm font-medium text-gray-700">Link</label>
+              <input class="mt-1 block w-full border border-gray-200 rounded px-3 py-2" type="url" id="link">
+            </div>
+            <div>
+              <label class="block text-sm font-medium text-gray-700">Tech Stack</label>
+              <input class="mt-1 block w-full border border-gray-200 rounded px-3 py-2" type="text" id="tech_stack">
+            </div>
+            <div>
+              <label class="block text-sm font-medium text-gray-700">Project Date</label>
+              <input class="mt-1 block w-full border border-gray-200 rounded px-3 py-2" type="date" id="project_date">
+            </div>
+          </div>
 
-    <label>Tech Stack:</label>
-    <input type="text" id="tech_stack">
+          <div>
+            <button type="submit" class="px-4 py-2 bg-black text-white rounded">💾 Save Project</button>
+          </div>
+        </form>
+      </section>
 
-    <label>Project Date:</label>
-    <input type="date" id="project_date">
-
-    <button type="submit">💾 Save Project</button>
-  </form>
-
-  <h3>Existing Projects</h3>
-  <table id="projectsTable" border="1">
-    <thead>
-      <tr><th>ID</th><th>Title</th><th>Tech Stack</th><th>Date</th><th>Actions</th></tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+      <section>
+        <h3 class="text-xl font-semibold mb-3">Existing Projects</h3>
+        <div class="overflow-x-auto bg-white border border-gray-200 rounded">
+          <table id="projectsTable" class="min-w-full text-left">
+            <thead class="bg-gray-50 text-sm text-gray-700">
+              <tr>
+                <th class="px-4 py-3">ID</th>
+                <th class="px-4 py-3">Title</th>
+                <th class="px-4 py-3">Tech Stack</th>
+                <th class="px-4 py-3">Date</th>
+                <th class="px-4 py-3">Actions</th>
+              </tr>
+            </thead>
+            <tbody class="text-sm text-gray-700"></tbody>
+          </table>
+        </div>
+      </section>
+    </main>
+  </div>
 
   <script type="module" src="js/projects_admin.js"></script>
 </body>
