--- a/public/admin/skills.html
+++ b/public/admin/skills.html
@@ -9,6 +9,7 @@
 <body>
   <div class="min-h-screen bg-white text-black">
     <main class="max-w-3xl mx-auto px-6 py-10">
+      <a href="index.php" class="inline-block text-sm text-gray-600 mb-6">← Back to Admin Dashboard</a>
       <h2 class="text-2xl font-bold mb-4">Manage Skills</h2>
 
       <section class="bg-white border border-gray-200 rounded-lg p-6 mb-8">
